--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,20 @@
 html,
 body,
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
 }
 
 body {
   background: #ccc;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+canvas {
+  width: 100vw !important;
+  height: 100vh !important;
 }
